agora adiciona no 0

--- a/ex01/Makefile
+++ b/ex01/Makefile
@@ -14,7 +14,7 @@ OBJ = $(SRC:.cpp=.o)
 all: $(NAME) $(INC)
 
 $(NAME): $(OBJ) $(INC)
-	$(CC) $(OBJ)
+	$(CC) $(OBJ) -o $(NAME)
 ## $(FLAGS) $< -o $@
 
 .cpp.o:
