here comes the horde

--- a/CPP01/ex01/Makefile
+++ b/CPP01/ex01/Makefile
@@ -1,11 +1,10 @@
 NAME = zombie
 
-CC = c++
+CC = clang
 FLAGS = -Wall -Wextra -Werror -std=c++98
 SRC = 	main.cpp \
 		Zombie.cpp \
-		newZombie.cpp \
-		randomChump.cpp
+		zombieHorde.cpp
 
 INC = 	Zombie.hpp
 
