here come the zombies

--- a/CPP01/ex00/Makefile
+++ b/CPP01/ex00/Makefile
@@ -4,7 +4,8 @@ CC = c++
 FLAGS = -Wall -Wextra -Werror -std=c++98
 SRC = 	main.cpp \
 		Zombie.cpp \
-		zombieHorde.cpp
+		newZombie.cpp \
+		randomChump.cpp
 
 INC = 	Zombie.hpp
 
