--- a/CPP00/ex01/Makefile
+++ b/CPP00/ex01/Makefile
@@ -1,7 +1,7 @@
 NAME = phonebook
 
 CC = c++
-FLAGS = -Wall -Wextra -Werror -std=c++98
+FLAGS = -Wall -Wextra -Werror -std=c++98 -fsanitize=leak
 SRC = 	main.cpp \
 		PhoneBook.cpp \
 		Contact.cpp
