--- a/CPP01/ex03/Makefile
+++ b/CPP01/ex03/Makefile
@@ -1,7 +1,7 @@
 NAME = 
 
 CC = c++
-FLAGS = -Wall -Wextra -Werror -std=c++98
+FLAGS = -Wall -Wextra -Werror -std=c++98 -fsanitize=leak
 SRC = 	main.cpp \
 		HumanA.cpp \
 		HumanB.cpp \
