mindblown by ex04

--- a/CPP01/ex04/Makefile
+++ b/CPP01/ex04/Makefile
@@ -1,15 +1,11 @@
 NAME = filestream
 
 CC = c++
-FLAGS = -Wall -Wextra -Werror -std=c++98 -fsanitize=leak
+FLAGS = -Wall -Wextra -Werror -std=c++98
 SRC = 	main.cpp \
-		HumanA.cpp \
-		HumanB.cpp \
-		Weapon.cpp
+		
 
-INC = 	Weapon.hpp \
-		HumanA.hpp \
-		HumanB.hpp
+INC = 	
 
 
 OBJ = $(SRC:.cpp=.o)
