refactoring to submit

--- a/CPP00/ex00/Makefile
+++ b/CPP00/ex00/Makefile
@@ -1,3 +1,15 @@
+# **************************************************************************** #
+#                                                                              #
+#                                                         :::      ::::::::    #
+#    Makefile                                           :+:      :+:    :+:    #
+#                                                     +:+ +:+         +:+      #
+#    By: csantos- <csantos-@student.42.fr>          +#+  +:+       +#+         #
+#                                                 +#+#+#+#+#+   +#+            #
+#    Created: 2022/11/03 19:28:51 by csantos-          #+#    #+#              #
+#    Updated: 2023/10/24 16:05:49 by csantos-         ###   ########.fr        #
+#                                                                              #
+# **************************************************************************** #
+
 NAME = megaphone
 
 CC = c++
@@ -6,14 +18,14 @@ FLAGS = -Wall -Wextra -Werror -std=c++98 -fsanitize=leak
 
 SRC = megaphone.cpp
 
-OBJ = $(SRC:.cpp=.o)
+OBJ = $(SRC:cpp=.o)
 
 all: $(NAME)
 
-$(NAME):$(SRC)
+$(NAME): $(SRC)
 	$(CC) $(SRC) $(FLAGS) -o $@
 
-%.o: %.cpp
+%o.: %.cpp
 	$(CC) -c -o $@ $(FLAGS)
 
 git:
@@ -22,9 +34,9 @@ git:
 	@git push
 
 clean:
-		rm -f $(OBJ)
+	rm -f $(OBJ)
 
 fclean: clean
-		rm -f $(NAME) $(OBJ)
+	rm -f $(NAME) $(OBJ)
 
 re: fclean all
