refactoring to submit again

--- a/CPP00/ex02/Makefile
+++ b/CPP00/ex02/Makefile
@@ -1,11 +1,23 @@
-NAME = Account
+# **************************************************************************** #
+#                                                                              #
+#                                                         :::      ::::::::    #
+#    Makefile                                           :+:      :+:    :+:    #
+#                                                     +:+ +:+         +:+      #
+#    By: csantos- <csantos-@student.42.fr>          +#+  +:+       +#+         #
+#                                                 +#+#+#+#+#+   +#+            #
+#    Created: 2022/11/08 20:18:43 by csantos-          #+#    #+#              #
+#    Updated: 2023/10/24 16:40:19 by csantos-         ###   ########.fr        #
+#                                                                              #
+# **************************************************************************** #
+
+NAME = account
 
 CC = c++
-FLAGS = -Wall -Wextra -Werror -std=c++98
+FLAGS = -Wall -Werror -Wextra -std=c++98 -fsanitize=leak
 SRC = 	tests.cpp \
 		Account.cpp
 
-INC = 	Account.hpp
+INC = Account.hpp
 
 OBJ = $(SRC:.cpp=.o)
 
@@ -13,22 +25,20 @@ all: $(NAME) $(INC)
 
 $(NAME): $(OBJ) $(INC)
 	$(CC) $(OBJ) -o $(NAME)
-## $(FLAGS) $< -o $@
 
 .cpp.o:
 	$(CC) $(FLAGS) -c $< -o $@
-##%.o: %.cpp
-##	$(CC) $(INC) -c -o $@ $(FLAGS)
 
 git:
 	@git add .
 	@git commit -m "$m"
 	@git push
 
+
 clean:
-		rm -f $(OBJ)
+	rm -f $(OBJ)
 
 fclean: clean
-		rm -f $(NAME) $(OBJ)
+	rm -f $(NAME) $(OBJ)
 
 re: fclean all
